make visualizer work as animated video

--- a/config.ini
+++ b/config.ini
@@ -1,20 +1,20 @@
 [DEFAULT]
-frame width = 640
+image dir = data
+log file path = data/interpolated.csv
+starting row = 0
 batch size = 5
 output type = folder
-sample size = 20
-starting row = 0
-log file path = output/interpolated.csv
-image dir = output
 frame height = 480
+frame width = 640
+sample size = 20
 
 [USER]
-frame width = 640
+image dir = data
+log file path = data/interpolated.csv
+starting row = 0
 batch size = 5
 output type = folder
-sample size = 40
-starting row = 40
-log file path = output/interpolated.csv
-image dir = output
-frame height = 420
+frame height = 480
+frame width = 640
+sample size = 20
 
